manifests/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: registry.access.redhat.com/ubi9/python-311
        ports:
        - containerPort: 8080
        command: ["bash", "-c"]
        args:
          - |
            [...]
